# tic-tac-toe-cpp

./: CMakeLists.txt  entrypoint.sh
include/: gameIO.hpp  gameService.hpp
src/: gameIO.cpp  gameService.cpp  main.cpp
tests/: gameServiceTests.cpp
